  exact improvement depends on which compiler options are used and the
  nature of the SAM file itself.

  The results of parsing invalid SAM files may change due to this update.
  For example some records where the QUAL string is shorter than SEQ
  may report "invalid QUAL character" instead of "SEQ and QUAL are of
  different length".

* Empty (0-length) files are no longer considered to be valid SAM files.
  Input files without any headers or records at all are usually seen in
  pipelines such as `somecmd | samtools ...` with `somecmd` aborting and
  outputting nothing, and it is beneficial for the second command to
  propagate the error.  (#261)

* New API functions hts_reglist_create() and sam_itr_regarray() are added
  to create hts_reglist_t region lists from `chr:<from>-<to>` type region
  specifiers.

* An improved region parsing function hts_parse_region() is added.  This
  is designed to help deal with ambiguities that arise when reference names
  contain colons followed by numbers.  It does this by checking possible
  names against the known list of references in the input file.  When even
  this method fails (for example when names "chr1" and "chr1:100-200" both
  exist) the reference name part can be quoted using curly braces.  Thus
  "{chr1}:100-200" and "{chr1:100-200}" disambiguate the above example.

  Specialisations of this function sam_parse_region() and fai_parse_region()
  are also added for SAM/BAM/CRAM files and fasta/fastq files respectively.
  HTSlib iterator functions that accept a region specifier have been
  upgraded to use the new interface.

* hts_idx_load() and hts_open() have been changed to support indexes
  which are not stored in the same location as the indexed file.  This works
  by appending a delimiter '##idx##' and the index file location to the
  normal file name.  hts_open() opens the file in the part before the
  delimiter; hts_idx_load() opens the index in the part after it.  So for